fix(SkinCitizen2022): styles on mobile devices

--- a/src/SkinVector2022/SkinVector2022.less
+++ b/src/SkinVector2022/SkinVector2022.less
@@ -32,3 +32,22 @@ header.mw-header {
 	background-color: transparent;
 	background-image: none !important;
 }
+
+/* 顶部 */
+@media (max-width: 720px) {
+	.mw-logo-icon {
+		display: block;
+	}
+
+	.mw-logo-container img {
+		display: none;
+	}
+
+	.mw-logo {
+		max-width: unset;
+	}
+}
+
+.vector-feature-zebra-design-disabled .vector-header-container {
+	min-width: none;
+}
